infrastructure/policies/staging/jwt-policy.yaml
apiVersion: tyk.tyk.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: jwt-policy
  namespace: staging
spec:
  access_rights_array:
    - name: httpbin-api
      namespace: staging
      versions:
        - Default
  active: true
  name: jwt-policy (Staging)
  state: active
  rate: -1
  per: -1
  throttle_interval: -1                 # Disable global throttling
  throttle_retry_limit: -1              # Disable global retry limit
  quota_max: -1                         # Disable global quota
  quota_renewal_rate: 60                # Quota renewal rate in seconds (1 minute)
